--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   geolocator: ^14.0.2
   wifi_iot: ^0.3.19+2
   wifi_scan: ^0.4.1+2
-  provider: ^6.1.
   shared_preferences: ^2.5.3
   flutter_spinkit: ^5.2.1
   equatable: ^2.0.7
@@ -67,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/data/wifi_db.json
+    - assets/data/Wifi_db.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
